package br.edu.ifs.designpatterns.chain.impl;

public class Emprestimo {

}
