package biblioteca;

public class Aluno {

	private String matricula;
	private String nome;
	
	public Aluno(String matricula, String nome) {
		this.matricula = matricula;
		this.nome = nome;
	}

	
	@Override
	public String toString() {
		return nome + " (" + matricula + ")";
	}
	
	
	
}
